[build] allow calling go script with arguments that match bazel